--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "vaul": "^1.1.2",
     "viem": "^2.43.4",
     "wagmi": "^3.1.3",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
