Fix Web3Modal 403 errors: use dynamic URL, disable analytics

--- a/config/fly.env.example
+++ b/config/fly.env.example
@@ -7,6 +7,10 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
+# WalletConnect / Reown - Get your project ID from https://cloud.reown.com
+# IMPORTANT: Add your deployment domains to the allowed domains list in Reown Cloud
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
+
 # Discord Bot
 DISCORD_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
